; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_openssl.c_crypto_bignum_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_openssl.c_crypto_bignum_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_bignum_deinit(%struct.crypto_bignum* %0, i32 %1) #0 {
  %3 = alloca %struct.crypto_bignum*, align 8
  %4 = alloca i32, align 4
  store %struct.crypto_bignum* %0, %struct.crypto_bignum** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %9 = bitcast %struct.crypto_bignum* %8 to i32*
  %10 = call i32 @BN_clear_free(i32* %9)
  br label %15

11:                                               ; preds = %2
  %12 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %13 = bitcast %struct.crypto_bignum* %12 to i32*
  %14 = call i32 @BN_free(i32* %13)
  br label %15

15:                                               ; preds = %11, %7
  ret void
}

declare dso_local i32 @BN_clear_free(i32*) #1

declare dso_local i32 @BN_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
